# yinsh

./: .gitmodules  CMakeLists.txt  README.md
yinsh-gui/: CMakeLists.txt  board.cpp  board.hpp  coords.cpp  coords.hpp  game.cpp  game.hpp  main.cpp  system.cpp  system.hpp  utils.hpp
